--- a/beanmaker2-runtime/src/main/web/css/cctable2.css
+++ b/beanmaker2-runtime/src/main/web/css/cctable2.css
@@ -1,3 +1,5 @@
+/* v0.9 - 2025-02-18 */
+
 .tb-filtered {
     display: none;
 }
@@ -16,4 +18,8 @@
 
 .tb-reorder {
     cursor: grab;
+}
+
+a.tb-operation {
+    cursor: pointer;
 }
