--- a/beanmaker2-runtime/src/main/web/css/cctable2.css
+++ b/beanmaker2-runtime/src/main/web/css/cctable2.css
@@ -1,4 +1,4 @@
-/* v0.9 - 2025-02-18 */
+/* v0.9.1 - 2025-03-04 */
 
 .tb-filtered {
     display: none;
@@ -22,4 +22,8 @@
 
 a.tb-operation {
     cursor: pointer;
+}
+
+.tb-operation-group {
+    white-space: nowrap;
 }
